Change position of component in layout header (desktop)

--- a/K_Bridge/Views/Home/Index.cshtml
+++ b/K_Bridge/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
                 }
             </div>
             <div class="col-lg-11">
-                <div class="col-lg-11 d-flex text-color-logo">
+                <div class="d-flex text-color-logo">
                     <div class="fw-normal">Chào</div>
                     <div class="fw-bold px-1">
                         @username,
