hide searchbar and show logoname

--- a/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
@@ -7,13 +7,13 @@
 
 <div class="container-fluid">
     <div class="row main-content mx-3 align-items-center py-2">
-        <div class="col-lg-3 col-3 sidebar">
+        <div class="col-lg-3 col-6 sidebar">
             <button class="d-flex align-items-center" onclick="window.location.href='/'">
                 <img class="img-fluid" style="max-height: 40px;" src="/img/Logo.png" alt="Logo">
-                <span class="ms-2 kbridge-text text-color-layout fs-4 d-none d-md-inline">K-BRIDGE</span>
+                <span class="ms-2 kbridge-text text-color-layout fs-4">K-BRIDGE</span>
             </button>
         </div>
-        <div class="col-lg-6  content d-sm-flex d-none justify-content-center">
+        <div class="col-lg-6 content d-lg-flex d-none justify-content-center">
                 <div class="input-group rounded-2 border border-main-color-layout" style="max-width:65%;">
                     <input type="text" class="focus px-2 flex-grow-1 bg-transparent text-color-layout text-white"
                            placeholder="Tìm kiếm..." aria-label="Search" aria-describedby="button-addon2"
@@ -24,12 +24,14 @@
                 </div>
         </div>
 
-  
-        
+ 
         <div class="col-lg-3 sidebar">
-            <button id="btnMenuHeader" class="d-flex justify-content-center d-lg-none h-100 w-100">
-                <i class="bi bi-list text-color-background " style="font-size: 30px;"></i>
-            </button>
+            <div class="d-lg-none d-flex flex-column align-items-center justify-content-end">
+                    <button id="btnMenuHeader" class="d-flex justify-content-end d-lg-none h-100 w-100">
+                        <i class="bi bi-list text-color-background " style="font-size: 30px;"></i>
+                    </button>
+            </div> 
+           
 
             <div class="d-lg-flex d-none flex-column align-items-center">
                 <div style="width: 100%; max-width: 300px;">
