--- a/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
@@ -9,7 +9,7 @@
     <div class="row main-content mx-3 align-items-center py-2">
         <div class="col-lg-3 col-6 sidebar">
             <button class="d-flex align-items-center" onclick="window.location.href='/'">
-                <img class="img-fluid" style="max-height: 40px;" src="/img/Logo.png" alt="Logo">
+                <img class="img-fluid" style="max-height: 40px;" src="/img/Logo_75.png" alt="Logo">
                 <span class="ms-2 kbridge-text text-color-layout fs-4">K-BRIDGE</span>
             </button>
         </div>
@@ -50,57 +50,73 @@
                     }
                     else
                     {
-                        <div class="position-relative" style="margin-right: 20px;">
-                            <button class="p-2 bg-main-color-logo border-main-color-layout rounded-3" id="notificationButton">
-                                <img src="~/img/notification50.png" class="img-fluid" alt="Notifications" width="25" height="25">
-                            </button>
-                            <div class="position-absolute fs-12 translate-middle badge rounded-circle bg-danger"
-                                 id="notificationCount" style="left:40px;">
-                                @unreadCount
-                            </div>
-                            <div id="notificationList" class="dropdown-menu dropdown-menu-end p-0 "
-                                 style="display: none; width: 300px; max-height: 400px; overflow-y: auto; background-color:#FDE7D2; cursor: pointer;">
-                                <div class="p-2 border-bottom">
-                                    <h6 class="mb-0">Thông báo</h6>
+                        <div class="d-flex justify-content-evenly">
+                            <div class="position-relative" style="margin-right: 20px;">
+                                <button class="p-2 bg-main-color-logo border-main-color-layout rounded-3" id="notificationButton">
+                                    <img src="~/img/notification50.png" class="img-fluid" alt="Notifications" width="25" height="25">
+                                </button>
+                                <div class="position-absolute fs-12 translate-middle badge rounded-circle bg-danger"
+                                     id="notificationCount" style="left:40px;">
+                                    @unreadCount
                                 </div>
-                                <div id="notificationItems">
-                                    @foreach (var notification in noti)
-                                    {
-                                        <div class="notification-item @(!notification.IsRead ? "fw-bold" : "")" data-id="@notification.ID" data-message="@notification.Message">
-                                            <div class="notification-content">
-                                                <div class="notification-title">@notification.Title</div>
-                                                <div class="notification-time d-flex justify-content-end">@notification.CreatedAt.ToString("dd/MM/yy hh:mm")</div>
+                                <div id="notificationList" class="dropdown-menu dropdown-menu-end p-0 "
+                                     style="display: none; width: 300px; max-height: 400px; overflow-y: auto; background-color:#FDE7D2; cursor: pointer;">
+                                    <div class="p-2 border-bottom">
+                                        <h6 class="mb-0">Thông báo</h6>
+                                    </div>
+                                    <div id="notificationItems">
+                                        @foreach (var notification in noti)
+                                        {
+                                            <div class="notification-item @(!notification.IsRead ? "fw-bold" : "")" data-id="@notification.ID" data-message="@notification.Message">
+                                                <div class="notification-content">
+                                                    <div class="notification-title">@notification.Title</div>
+                                                    <div class="notification-time d-flex justify-content-end">@notification.CreatedAt.ToString("dd/MM/yy hh:mm")</div>
+                                                </div>
                                             </div>
-                                        </div>
-                                    }
+                                        }
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="d-md-flex align-items-center mx-3 pointer-event" onclick="window.location.href='/UserProfile?id=@ViewBag.UserID'">
-                            @if (ViewBag.CurrentUser.Avatar != null)
-                            {
-                                <img src="~/avatars/@ViewBag.CurrentUser.Avatar" alt="avatar" class="me-2 rounded-3" style="width: 40px; height: 40px;" />
-                            }
-                            else
-                            {
-                                <img src="/img/avatar_default.png" alt="avatar" class="me-2 rounded-3" style="width: 40px; height: 40px;" />
-                            }
-                            <div class=" text-color-background mb-1 fw-bold flex-grow-1 pe-none">@ViewBag.UsernameLoggedIn</div>
+                            <div class="d-md-flex align-items-center mx-3 pointer-event" onclick="window.location.href='/UserProfile?id=@ViewBag.UserID'">
+                                @if (ViewBag.CurrentUser.Avatar != null)
+                                {
+                                    <img src="~/avatars/@ViewBag.CurrentUser.Avatar" alt="avatar" class="me-2 rounded-3" style="width: 40px; height: 40px;" />
+                                }
+                                else
+                                {
+                                    <img src="/img/avatar_default.png" alt="avatar" class="me-2 rounded-3" style="width: 40px; height: 40px;" />
+                                }
+                                <div class=" text-color-background mb-1 fw-bold flex-grow-1 pe-none">@ViewBag.UsernameLoggedIn</div>
+                            </div>
+
                         </div>
                     }
                 </div>
             </div>
         </div>
 
-        <div class="bg-main-color-header w-100 py-2 d-none" id="contentMenuHeader">
+        <div class="bg-main-color-header w-100 d-none" id="contentMenuHeader">
+            <div class="d-lg-none d-flex py-2 justify-content-center">
+                <div class="input-group rounded-2 border border-main-color-layout">
+                    <input type="text" class="focus px-2 flex-grow-1 bg-transparent text-color-layout text-white"
+                           placeholder="Tìm kiếm..." aria-label="Search" aria-describedby="button-addon2"
+                           id="searchInput">
+                    <button class="btn btn-main-color-header" type="button" id="button-addon2">
+                        <img src="/img/iconSearch.png" alt="Search Icon">
+                    </button>
+                </div>
+            </div>
             @if (!isLoggedIn)
             {
-                <div class="align-items-center d-flex justify-content-between" style="width: 85%; max-width:300px;">
-                    <button type="button" class="d-flex flex-nowrap btn px-2 px-md-4 py-1 btn-account-sign"
-                            style="width:48%;" data-bs-toggle="modal" data-bs-target="#signupModal">
+                <div class="align-items-center d-lg-none d-flex justify-content-end gap-2" style="width: 100%;">
+                    <button type="button" class="text-center btn px-2 px-md-4 py-1 btn-account-sign" style="width:48%; max-width: 160px;" 
+                            data-bs-toggle="modal" data-bs-target="#signupModal">
                         Đăng ký
                     </button>
-                    <button type="button" class=" d-flex flex-nowrap btn px-2 px-md-4 py-1 btn-account-log" style="width:48%;" data-bs-toggle="modal" data-bs-target="#loginModal">Đăng nhập</button>
+                    <button type="button" class="text-center btn px-2 px-md-4 py-1 btn-account-log" style="width:48%; max-width: 160px;"
+                            data-bs-toggle="modal" data-bs-target="#loginModal">
+                    Đăng nhập
+                </button>
                 </div>
             }
             else
@@ -156,7 +172,7 @@
             <div class="modal-header border-0">
                 <div class="modal-title" id="signupModalLabel">
                     <div class="d-flex align-items-center">
-                        <img class="img-fluid" style="max-height: 40px;" src="/img/Logo.png" alt="Logo">
+                        <img class="img-fluid" style="max-height: 40px;" src="/img/Logo_75.png" alt="Logo">
                         <span class="ms-2 kbridge-text text-color-header fs-4 d-none d-md-inline">K-BRIDGE</span>
                     </div>
                 </div>
@@ -226,7 +242,7 @@
                     <h5 class="modal-title" id="signupModalLabel">
                         <div class="d-flex align-items-center flex-column mb-4">
                             <img class="img-fluid h-75" src="/img/Logo_75.png" alt="Logo">
-                            <span class="ms-2 kbridge-text text-color-header fs-4 d-none d-md-inline">K-BRIDGE</span>
+                            <span class="m-2 kbridge-text text-color-header fs-2 d-none d-md-inline">K-BRIDGE</span>
                         </div>
                     </h5>
 
