--- a/K_Bridge/wwwroot/css/Style.css
+++ b/K_Bridge/wwwroot/css/Style.css
@@ -707,12 +707,12 @@ body {
 }
 .contentMenuHeader {
     max-height: 0;
-    transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
+    transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out;
     opacity: 0;
 }
 
     .contentMenuHeader.show {
         max-height: 1000px; /* Điều chỉnh giá trị này theo nhu cầu */
         opacity: 1;
-        transition: max-height 0.5s ease-in, opacity 0.5s ease-in;
+        transition: max-height 0.5s ease-in-out, opacity 0.5s ease-in-out;
     }
