--- a/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class=" d-flex flex-column mt-4 border-main-color-layout border-2 h-auto w-auto rounded-8" style="max-width: 300px;">
     <button id="toggle-comments" class="flex-grow-0 border-bottom p-3 rounded-3 h-50 d-lg-inline-flex justify-content-lg-between">
         <div class="text-uppercase">Bình luận</div>
-        <img id="arrow-icon" src="/img/arrow_down.png" alt="arrow_down" />
+        <img id="arrow-icon" src="/img/arrow_down.png" width="10" height="10" alt="arrow_down" />
     </button>
 
     <div id="comments-container" class="rounded-3 overflow-auto flex-grow-1 mx-lg-3 d-flex flex-column-reverse" style="height: 460px;">
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="mx-3 my-2 input-group w-auto rounded-8 bg-main-color-btn ">
-        <input id="message-input" type="text" class="flex-grow-1 fs-12 text-color-logo rounded-8 w-auto px-2 focus bg-main-color-btn" placeholder="Nhập nội dung...">
+        <input id="message-input" type="text" class="flex-grow-1 fs-12 text-color-logo rounded-8 w-auto px-2 focus" placeholder="Nhập nội dung...">
         <button id="send-button" type="button" class="btn">
             <img src="~/img/send.png" alt="Send" class="opacity-75" />
         </button>
