--- a/K_Bridge/Views/Home/TopicList.cshtml
+++ b/K_Bridge/Views/Home/TopicList.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="row mb-5">
-    <div class="col-12 d-flex justify-content-start fw-bold fs-4 text-uppercase mb-3">
+    <div class="col-12 d-flex justify-content-start fw-bold fs-4 text-uppercase mb-3 text-color-logo">
         @ViewBag.ForumName
     </div>
 
@@ -12,23 +12,23 @@
         @foreach (var topic in ViewBag.Topics)
         {
             <a class="w-1 border-bottom text-decoration-none text-black" href="/Topic/Post/List?topic=@topic.ID">
-                <div class="row flex-nowrap p-2 m-0">
-                    <div class="col-lg-1 p-0 m-2 d-flex justify-content-center">
+                <div class="row flex-nowrap p-2 m-0 text-color-logo">
+                    <div class="col-3 col-lg-1 p-0 d-flex justify-content-center align-items-center">
                         <img src="/img/cate_1.png" alt="avatar" style="width: 50px; height: 50px;" />
                     </div>
-                    <div class="col-lg-5 d-flex flex-column justify-content-center">
-                        <div class="fw-normal p-0 my-1">@topic.Name</div>
+                    <div class="col-lg-5 col-10 d-flex flex-column justify-content-center">
+                        <div class="fw-normal p-0 my-1 ">@topic.Name</div>
                         <div class="fs-12 opacity-75 my-1">
                             @topic.Description
                         </div>
                     </div>
-                    <div class="col-lg-2 p-0 d-flex align-items-center">
+                    <div class="col-lg-2 p-0 d-lg-flex d-none align-items-center">
                         <div class="col-lg-11 d-flex flex-column justify-content-center">
                             <div class="fs-6 me-2 p-0 d-flex justify-content-center">@topic.Posts.Count</div>
                             <div class="fw-normal p-0 d-flex justify-content-center">Bài viết</div>
                         </div>
                     </div>
-                    <div class="col-lg-4 p-0 d-flex align-items-center">
+                    <div class="col-lg-4 p-0 d-lg-flex d-none align-items-center">
                         <div class="col-lg-2 p-0 m-2 d-flex align-items-center">
                             <img src="~/img/avatar_default.png" alt="avatar" style="width: 40px; height: 40px;" />
                         </div>
