--- a/K_Bridge/Views/Shared/_Layout.cshtml
+++ b/K_Bridge/Views/Shared/_Layout.cshtml
@@ -38,16 +38,16 @@
     </header>
     <div class="container-fluid">
         <div class="row main-content mt-4 mx-3">
-            <div class="col-lg-3 col-md-4 sidebar mb-4 d-none d-md-block">
+            <div class="col-xl-3 col-4 sidebar mb-4 d-none d-md-block">
                 <vc:layout-forum-list />
                 <vc:layout-stat-list />
             </div>
-            <div class="col-lg-6 col-md-8 col-12 content mb-4 ">
-                <main role="main" class="pb-3">
+            <div class="col-xl-6 col-md-8 col-12 content mb-4 ">
+                <main role="main" class="pb-3 text-color-logo">
                     @RenderBody()
                 </main>
             </div>
-            <div class="col-lg-3 col-md-12 sidebar d-none d-lg-block">
+            <div class="col-xl-3 sidebar d-none d-xl-block">
                 <div class="d-flex flex-column align-items-center">
                     <div style="width: 100%; max-width: 300px;">
                         <vc:layout-new-post />
