--- a/K_Bridge/Views/Home/Index.cshtml
+++ b/K_Bridge/Views/Home/Index.cshtml
@@ -105,7 +105,6 @@
                         </div>
                     </div>
                 </div>
-                
             }
         </div>
     </div>
@@ -129,14 +128,14 @@
                             <div class="col-lg-1 col-2 p-0 d-flex justify-content-center align-items-center">
                                 <img src="/img/cate_1.png" alt="avatar" style="width: 50px; height: 50px;" />
                             </div>
-                            <div class="col-lg-5 col-10 d-flex flex-column justify-content-center">
+                            <div class="col-lg-6 col-10 ps-3 d-flex flex-column justify-content-center">
                                 <div class="fw-normal p-0 my-1">@topic.Name</div>
-                                <div class="fs-12 opacity-75 my-1">
+                                <div class="fs-12 opacity-75">
                                     @topic.Description
                                 </div>
                             </div>
-                            <div class="col-2 p-0 d-none d-lg-flex align-items-center">
-                                <div class="d-flex flex-column justify-content-center">
+                            <div class="col-lg-1 p-0 d-none d-lg-flex justify-content-center align-items-center">
+                                <div class="d-flex flex-column ">
                                     <div class="fs-6 me-2 p-0 d-flex justify-content-center">@topic.Posts.Count</div>
                                     <div class="fw-normal p-0 d-flex justify-content-center">Bài viết</div>
                                 </div>
