--- a/K_Bridge/Views/Home/PostList.cshtml
+++ b/K_Bridge/Views/Home/PostList.cshtml
@@ -1,6 +1,6 @@
 ﻿@using K_Bridge.Models
 @{
-    ViewData["Title"] = "Bài viết";
+    ViewData["Title"] = @ViewBag.TopicName;
     <link href="/css/Newest.css" rel="stylesheet" />
 }
 <div class="row mb-3 d-flex justify-content-between">
