--- a/K_Bridge/Views/Home/Index.cshtml
+++ b/K_Bridge/Views/Home/Index.cshtml
@@ -69,13 +69,13 @@
                 <hr class="my-0">
                 <div class="row m-0 my-2 px-3" onclick="window.location.href='/Post/Details?post=@latestPost.ID'">
                     <div class="col-lg-2 col-3 d-flex flex-column justify-content-center align-items-center">
-                        <div class="d-none d-md-block">
+                        <div class="d-none d-sm-block">
                             <div class="newest-card-stat py-2 fs-14 text-nowrap">@(latestPost.Replies?.Count ?? 0) Câu trả lời</div>
                             <div class="newest-card-stat py-2 fs-14">@latestPost.ViewCount Lượt xem</div>
                         </div>
-                        <div class="d-sm-none">
-                            <div class="newest-card-stat py-2 fs-14">@(latestPost.Replies?.Count ?? 0)<i class="bi bi-chat-dots px-2 align-items-center"></i> </div>
-                            <div class="newest-card-stat py-2 fs-14">@latestPost.ViewCount <i class="bi bi-eye px-1 align-items-center"></i></div>
+                        <div class="newest-card-stats d-sm-none d-flex flex-column align-items-center">
+                            <div class="newest-card-stat py-2 fs-14">@(latestPost.Replies?.Count ?? 0)<i class="bi bi-chat-dots align-items-center px-2"></i></div>
+                            <div class="newest-card-stat py-2 fs-14">@latestPost.ViewCount <i class="bi bi-eye align-items-center px-2"></i></div>
                         </div>
                     </div>  
                     <div class="col-lg-10 col-9">
